# schmeconomics_server

./: .env  Cargo.toml  README.md  Rocket.toml  app.db  config.json
db/: create.sql  drop.sql  insert.sql
email_templates/: add_account.html  delete_account.html  remove_account.html  update_account.html  verify_email.html
src/: auth.rs  config.rs  controller.rs  cors.rs  db_utils.rs  lib.rs  models.rs  response.rs  sqlite.rs  state.rs
src/accounts/: error.rs  mod.rs  models.rs  routes.rs
src/auth/: error.rs  middleware.rs  mod.rs  routes.rs
src/categories/: error.rs  mod.rs  models.rs  routes.rs  test.rs
src/currency_conv_provider/: error.rs  mod.rs  models.rs
src/transactions/: error.rs  mod.rs  models.rs  routes.rs  test.rs
src/users/: error.rs  mod.rs  models.rs  routes.rs
src/validations/: error.rs  mod.rs
