[package]
name = "schmeconomics-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
lazy_static = "1.4.0"
regex = "1.6.0"
reqwest = { version="0.11.18", default-features=false, features=["rustls-tls"] }
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"
sqlite = "0.27.0"